# delivery-tracking

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
configs/deploy/: dmacrgo.service  dmcargo.service  setup.sh
configs/nginx/: delivery_tracking.conf
src/apps/authentication/: urls.py  views.py
src/apps/authentication/templates/auth/: login.html
src/apps/general/: telegram.py  urls.py  views.py
src/apps/general/templates/general/: 404.html  index.html
src/apps/orders/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
src/apps/orders/migrations/: 0001_initial.py  0002_alter_order_status.py  0003_alter_order_options_order_created_at_and_more.py
src/apps/orders/templates/orders/: confirm_delete.html  detail.html  form.html  list.html
src/apps/products/: admin.py  models.py
src/apps/products/migrations/: 0001_initial.py  0002_alter_product_options_remove_product_title_and_more.py
src/core/: settings.py  urls.py
src/locale/en/LC_MESSAGES/: django.po
src/locale/ru/LC_MESSAGES/: django.po
src/locale/tk/LC_MESSAGES/: django.po
src/static/css/: main.css
src/templates/: base.html
src/templates/admin/: base_site.html
src/templates/partials/: footer.html  header.html
tests/: test_models.py
