[project]
name = "delivery-tracking"
version = "0.1.0"
description = ""
authors = [
    {name = "n-freman",email = "smiron1703@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "django (>=5.0.0,<5.1.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "django-constance (>=4.3.4,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
